tests/parser/errors/fn_declaration.ray
fn
fn add
fn add(
fn add(1)
fn add(a)
fn add(a: int -> bool
fn add() bool
fn add() -> bool 1 + 1
fn a(
    a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,
    a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,
    a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,
    a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,
    a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,
    a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,a:int,
) -> bool {}

